Add series component

--- a/src/content/blog/mycelium-v2-build-system.mdx
+++ b/src/content/blog/mycelium-v2-build-system.mdx
@@ -3,6 +3,7 @@ pubDate: "2025-09-03"
 banner: "/img/blog/mycelium/logo-dagger.jpg"
 title: "CI/CD Pipelines: Choosing the Right Tool"
 description: "A comprehensive comparison of CI/CD tools including GitHub Actions, Dagger, Bazel, and Earthly"
+series: "Mycelium v2"
 ---
 
 ## Why continous integration and delivery?
