--- a/src/content/blog/mycelium-v2-build-system.mdx
+++ b/src/content/blog/mycelium-v2-build-system.mdx
@@ -12,7 +12,7 @@ When you start a new project it's important to set-up a good foundation to build
 and test new functionality. This is a key component of moving work between silos
 (as referred to in **The Phoenix Project**). If you can build, test and release your
 software in automated way it's easy to verify if it works correctly and have it
-up on preview/staging environments for product owners/QA/ops (the silos) and
+move to the next silo: developers/product owners/QA/ops/AI agents/code analysis and
 other teams to verify if the new changes work, hence continuously integrate.
 
 - **Faster feedback loops** - developers get quick confirmation if their new
@@ -23,6 +23,10 @@ other teams to verify if the new changes work, hence continuously integrate.
 - **Faster time to market** - ensure "what worked on my machine" also works in
   production and CI/CD
 - **Fewer bugs and production issues** - less firefighting, fewer outages, etc
+
+Want to know more have an audit how your CI/CD pipeline is setup? Consider my service:
+  
+<ServiceLink service="audit" />
 
 ## Technical (non-functional) requirements
 
