Add YT component

--- a/src/content/blog/mycelium-v2-build-system.mdx
+++ b/src/content/blog/mycelium-v2-build-system.mdx
@@ -24,7 +24,7 @@ other teams to verify if the new changes work, hence continuously integrate.
   production and CI/CD
 - **Fewer bugs and production issues** - less firefighting, fewer outages, etc
 
-Want to know more have an audit how your CI/CD pipeline is setup? Consider my service:
+Want to know more? Would you like to have an audit how your CI/CD pipeline is setup? Consider my service:
   
 <ServiceLink service="audit" />
 
