--- a/src/content/blog/type-class-constraints-algebra.mdx
+++ b/src/content/blog/type-class-constraints-algebra.mdx
@@ -5,7 +5,14 @@ title: "Type class constraints in object algebras"
 description: "Empower your object algebras"
 ---
 
-It’s been a while since Julien Richard Foy has given a [talk](https://www.youtube.com/watch?v=snbsYyBS4Bs) about object algebras. Mean while he has been busy building [endpoint4s](https://github.com/endpoints4s/endpoints4s/) using this technique.
+It’s been a while since Julien Richard Foy has given a talk about object algebras. Mean while he has been busy building [endpoint4s](https://github.com/endpoints4s/endpoints4s/) using this technique.
+
+You can view the video here
+
+<YouTubePlayer 
+      videoId="snbsYyBS4Bs" 
+      title="Object algebras"
+      autoplay={false} muted={false} />
 
 In this blog post I would like to go over type class constraints on object algebras which make object algebras more powerful. I’ve build a [toy library](https://github.com/Fristi/itinere) in 2018 myself using this technique which is similar to endpoint4s or tapir
 
