--- a/src/content/blog/mycelium-v2-edge-peripheral.mdx
+++ b/src/content/blog/mycelium-v2-edge-peripheral.mdx
@@ -16,7 +16,7 @@ In the Mycelium v2 ecosystem, edge devices are the sensory and controlling print
 
 ## Architecture pivot from v1
 
-To accomplish this we switched from an archictecture where the hardware peripheral connects via WiFi to the cloud backend and needs to authenticate itself with [Auth0](https://auth0.com/) to a Bluetooth Low Energy (BLE). To connect and authenticate with WiFi can be resource intensive and the connection to any HTTP + TLS service as well (as you need encryption). Other companies like Philips Hue and Tado are also using with a hub (central) architecture which is more power efficient.
+To accomplish this we switched from an architecture where the hardware peripheral connects via WiFi to the cloud backend and needs to authenticate itself with [Auth0](https://auth0.com/) to a Bluetooth Low Energy (BLE). To connect and authenticate with WiFi can be resource intensive and the connection to any HTTP + TLS service as well (as you need encryption). Other companies like Philips Hue and Tado are also using with a hub (central) architecture which is more power efficient.
 
 <Aside variant="info">BLE (Bluetooth Low Energy) is a wireless protocol designed for minimal power consumption. It organizes data into services (collections of related functionality) and characteristics (individual data points you can read/write). Unlike WiFi, BLE maintains connections with minimal energy overhead, making it ideal for battery-powered devices that need to communicate periodically. BLE differs from Bluetooth Classic by using a completely different protocol stack optimized for low power—it can sleep between transmissions and uses much simpler connection procedures, whereas Bluetooth Classic maintains continuous connections and consumes significantly more power.</Aside>
 
@@ -34,7 +34,7 @@ A BLE **peripheral**, on the other hand, is a device that advertises its presenc
 
 ## What did we install on our printed circuit board (PCB) ?
 
-Like I've mentioned in the start of the series, my brother Hans de Joing did the design of the PCB. We've used the following components which communicate are all connected to the microcontroller ESP32. There are different protocols you can use in embedded systems, but we only need to use I2C.
+Like I've mentioned in the start of the series, my brother Hans de Jong did the design of the PCB. We've used the following components which are all connected to the microcontroller ESP32. There are different protocols you can use in embedded systems, but we only need to use I2C.
 
 - [ESP32-WROOM](https://www.espressif.com/en/products/modules/esp32) - This is the brain of the PCB, which will run the firmware program and reads the sensors and does stuff accordingly with it.
 - [BH1730FVC](https://www.rohm.com/products/sensors-mems/ambient-light-sensors/digital-ambient-light-sensors/bh1730fvc-product) - For measuring lux
@@ -43,16 +43,16 @@ Like I've mentioned in the start of the series, my brother Hans de Joing did the
 
 <Aside variant="info">I2C (Inter-Integrated Circuit) is a simple two-wire communication protocol that allows multiple devices to share the same bus. It uses just two lines: SDA (data) and SCL (clock). Each device has a unique address, making it perfect for connecting multiple sensors to a single microcontroller without needing separate pins for each one.</Aside>
 
-## How do we plan to achieve power efficieny ?
+## How do we plan to achieve power efficiency?
 
 We will use ESP32 deep sleep. Deep sleep is a power-saving mode where the microcontroller shuts down almost all of its components—the CPU stops executing code, RAM is powered down, and most peripherals are disabled. Only a small portion of the system remains active to wake the device up at predetermined intervals or when specific events occur (like a timer or external interrupt). During deep sleep, the ESP32 consumes only microamps of current instead of the normal 80-240mA, extending battery life from days to months.
 
-Additionally, using BLE instead of WiFi provides significant power savings according to [this sheet](https://www.espressif.com/sites/default/files/documentation/esp32_datasheet_en.pdf). While WiFi requires the ESP32 to maintain a constant connection and perform regular keep-alive transmissions, BLE is designed for Devices to quickly connect, exchange data, and disconnect—all while consuming much less power. WiFi operations can draw 240mA during transmission with an ESP32 according to the specification, whereas BLE typically uses only 95-100mA, making it ideal for our battery-powered edge devices.
+Additionally, using BLE instead of WiFi provides significant power savings according to [this sheet](https://www.espressif.com/sites/default/files/documentation/esp32_datasheet_en.pdf). While WiFi requires the ESP32 to maintain a constant connection and perform regular keep-alive transmissions, BLE is designed for devices to quickly connect, exchange data, and disconnect—all while consuming much less power. WiFi operations can draw 240mA during transmission with an ESP32 according to the specification, whereas BLE typically uses only 95-100mA, making it ideal for our battery-powered edge devices.
 
 ## Next steps
 
 Now that we have our PCB assembled with all the necessary components, the next step is programming the firmware onto the ESP32 microcontroller. This involves using a programmer to flash our custom code that will handle sensor readings, BLE communication, and power management. The firmware will orchestrate everything we've discussed—from deep sleep cycles to I2C sensor communication and BLE data transmission to the central device. In the next blog post, we'll dive into the firmware development process, exploring how we implement the power-efficient sensor monitoring loop and establish reliable BLE communication protocols.
 
-Do you have an idea to build a new device which interacts with cloud technology which measures on controls things in the outside world? That's internet of things, I might be able to help out! Read more on this
+Do you have an idea to build a new device which interacts with cloud technology which measures or controls things in the outside world? That's internet of things, I might be able to help out! Read more on this
 
 <ServiceLink service="venture" />
