Spelling improvements and explain a bit more on the power efficiency

--- a/src/content/blog/mycelium-v2-edge-peripheral.mdx
+++ b/src/content/blog/mycelium-v2-edge-peripheral.mdx
@@ -16,11 +16,13 @@ In the Mycelium v2 ecosystem, edge devices are the sensory and controlling print
 
 ## Architecture pivot from v1
 
-To accomplish this we switched from an architecture where the hardware peripheral connects via WiFi to the cloud backend and needs to authenticate itself with [Auth0](https://auth0.com/) to a Bluetooth Low Energy (BLE). To connect and authenticate with WiFi can be resource intensive and the connection to any HTTP + TLS service as well (as you need encryption). Other companies like Philips Hue and Tado are also using with a hub (central) architecture which is more power efficient.
+To accomplish this, we moved away from an architecture where the hardware peripheral connects via WiFi directly the cloud backend. Instead we use Bluetooth Low Energy (BLE) to send the data to another device which is always on, called `edge-central`. 
+
+To connect and authenticate with WiFi can be resource intensive and the connection to any HTTP + TLS service as well (as you need encryption). Other companies like Philips Hue and Tado are also using with a hub (central) architecture which is more power efficient.
 
 <Aside variant="info">BLE (Bluetooth Low Energy) is a wireless protocol designed for minimal power consumption. It organizes data into services (collections of related functionality) and characteristics (individual data points you can read/write). Unlike WiFi, BLE maintains connections with minimal energy overhead, making it ideal for battery-powered devices that need to communicate periodically. BLE differs from Bluetooth Classic by using a completely different protocol stack optimized for low power—it can sleep between transmissions and uses much simpler connection procedures, whereas Bluetooth Classic maintains continuous connections and consumes significantly more power.</Aside>
 
-The communication to the cloud is pushed to the _central_, which is single board computer (SBC) which is more powerful and is _always_ on and connected to a power supply. The central initially needs to be onboarded, as it doesn't have WiFi or [Auth0](https://auth0.com/) setup. So if the central doesn't have any state regarding WiFi or [Auth0](https://auth0.com/) it will also be BLE peripheral where your phone or desktop tries to connect to via BLE. More about the `edge-central` in the next blog post.
+The communication to the cloud is pushed to the `edge-central`, which is single board computer (SBC) which is more powerful and is _always_ on and connected to a power supply. The central initially needs to be onboarded, as it doesn't have WiFi or [Auth0](https://auth0.com/) setup. So if the central doesn't have any state regarding WiFi or [Auth0](https://auth0.com/) it will also be BLE peripheral where your phone or desktop tries to connect to via BLE. More about the `edge-central` in the next blog post.
 
 ### Bluetooth central vs Bluetooth peripheral
 
@@ -45,9 +47,9 @@ Like I've mentioned in the start of the series, my brother Hans de Jong did the 
 
 ## How do we plan to achieve power efficiency?
 
-We will use ESP32 deep sleep. Deep sleep is a power-saving mode where the microcontroller shuts down almost all of its components—the CPU stops executing code, RAM is powered down, and most peripherals are disabled. Only a small portion of the system remains active to wake the device up at predetermined intervals or when specific events occur (like a timer or external interrupt). During deep sleep, the ESP32 consumes only microamps of current instead of the normal 80-240mA, extending battery life from days to months.
-
-Additionally, using BLE instead of WiFi provides significant power savings according to [this sheet](https://www.espressif.com/sites/default/files/documentation/esp32_datasheet_en.pdf). While WiFi requires the ESP32 to maintain a constant connection and perform regular keep-alive transmissions, BLE is designed for devices to quickly connect, exchange data, and disconnect—all while consuming much less power. WiFi operations can draw 240mA during transmission with an ESP32 according to the specification, whereas BLE typically uses only 95-100mA, making it ideal for our battery-powered edge devices.
+- We will use ESP32 deep sleep. Deep sleep is a power-saving mode where the microcontroller shuts down almost all of its components—the CPU stops executing code, RAM is powered down, and most peripherals are disabled. Only a small portion of the system remains active to wake the device up at predetermined intervals or when specific events occur (like a timer or external interrupt). During deep sleep, the ESP32 consumes only microamps of current instead of the normal 80-240mA, extending battery life from days to months. We plan to sample measurements every **10 minutes**
+- Additionally, using BLE instead of WiFi provides significant power savings according to [this sheet](https://www.espressif.com/sites/default/files/documentation/esp32_datasheet_en.pdf). While WiFi requires the ESP32 to maintain a constant connection and perform regular keep-alive transmissions, BLE is designed for devices to quickly connect, exchange data, and disconnect—all while consuming much less power. WiFi operations can draw 240mA during transmission with an ESP32 according to the specification, whereas BLE typically uses only 95-100mA, making it ideal for our battery-powered edge devices.
+- We implement a custom deviation-based time series compression library directly in the firmware, closely resembling the Swinging Door Compression algorithm. This compression system maintains a compressed array of sensor readings in the ESP32's RTC (Real-Time Clock) memory, which remains powered even during deep sleep cycles. By only storing data points that deviate significantly from the predicted trend line, we can dramatically reduce the amount of data that needs to be transmitted over BLE while preserving the essential patterns in our sensor measurements. This approach allows us to buffer multiple readings between wake cycles and transmit only the most meaningful data points to the central device.
 
 ## Next steps
 
