--- a/src/content/blog/mycelium-v2-edge-peripheral.mdx
+++ b/src/content/blog/mycelium-v2-edge-peripheral.mdx
@@ -1,7 +1,7 @@
 ---
 pubDate: "2025-09-14"
 banner: "/img/blog/mycelium/pcb.jpeg"
-title: "Building the edge-peripheral a ESP32 edge device"
+title: "Mycelium v2: building the edge-peripheral device"
 description: "Building a efficient ESP32 edge device for Mycelium v2"
 draft: false
 series: "Mycelium v2"
@@ -50,6 +50,18 @@ Like I've mentioned in the start of the series, my brother Hans de Jong did the 
 - We will use ESP32 deep sleep. Deep sleep is a power-saving mode where the microcontroller shuts down almost all of its components—the CPU stops executing code, RAM is powered down, and most peripherals are disabled. Only a small portion of the system remains active to wake the device up at predetermined intervals or when specific events occur (like a timer or external interrupt). During deep sleep, the ESP32 consumes only microamps of current instead of the normal 80-240mA, extending battery life from days to months. We plan to sample measurements every **10 minutes**
 - Additionally, using BLE instead of WiFi provides significant power savings according to [this sheet](https://www.espressif.com/sites/default/files/documentation/esp32_datasheet_en.pdf). While WiFi requires the ESP32 to maintain a constant connection and perform regular keep-alive transmissions, BLE is designed for devices to quickly connect, exchange data, and disconnect—all while consuming much less power. WiFi operations can draw 240mA during transmission with an ESP32 according to the specification, whereas BLE typically uses only 95-100mA, making it ideal for our battery-powered edge devices.
 - We implement a custom deviation-based time series compression library directly in the firmware, closely resembling the Swinging Door Compression algorithm. This compression system maintains a compressed array of sensor readings in the ESP32's RTC (Real-Time Clock) memory, which remains powered even during deep sleep cycles. By only storing data points that deviate significantly from the predicted trend line, we can dramatically reduce the amount of data that needs to be transmitted over BLE while preserving the essential patterns in our sensor measurements. This approach allows us to buffer multiple readings between wake cycles and transmit only the most meaningful data points to the central device.
+
+Here's how the cycle works:
+
+1. **Wake up** every 10 minutes from deep sleep
+2. **Read sensors** via I2C (light, temperature, humidity, soil moisture)
+3. **Compress and buffer** the data using our deviation-based algorithm in RTC memory
+4. **Check buffer capacity** - if we have 6 entries, proceed to transmission
+5. **Advertise via BLE** - broadcast our presence so the central can discover us
+6. **Transmit buffered data** when the central connects and requests it
+7. **Clear buffer** after successful transmission
+8. **Return to deep sleep** for another 10-minute cycle
+
 
 ## Next steps
 
